broke it as asked by my mentor. line 41 doesn't work.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="template hidden">
       <div class="col-md-4">
         <div class="video-wrapper">
-          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/p5Vsg1CrhrI" frameborder="0" allowfullscreen></iframe> -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/p5Vsg1CrhrI" frameborder="0" allowfullscreen></iframe>
           <!-- put image tag here with fake image src , in code replace img src with thubmnail-->
-          <img src="http://lorempixel.com/560/315/" alt="">
+          <img src="http://lorempixel.com/560/315/" alt="" id="thumbnail-image">
         </div>
       </div>
     </div>
