--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     </section>
     <section class="row results"></section>
     <div class="template hidden">
-      <div class="col-md-4">
-        <div class="video-wrapper">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/p5Vsg1CrhrI" frameborder="0" allowfullscreen></iframe>
+      <div class="col-md-4 thumbnail">
+        <div class="image-wrapper">
+          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/p5Vsg1CrhrI" frameborder="0" allowfullscreen></iframe> -->
           <!-- put image tag here with fake image src , in code replace img src with thubmnail-->
-          <img src="http://lorempixel.com/560/315/" alt="" id="thumbnail-image">
+          <img src="http://lorempixel.com/560/315/" alt="" class="image-thumbnail">
         </div>
       </div>
     </div>
-    <div class="melody-overlay">
+    <div class="melody-overlay hidden">
       <div class="melody-modal">
-        <div class="video-wrapper"><iframe src="https://www.youtube.com/embed/p5Vsg1CrhrI" width="560" height="315" frameborder="0" allowfullscreen autoplay></iframe></div>
+        <div class="video-wrapper"><iframe src="" width="560" height="315" frameborder="0" allowfullscreen autoplay></iframe></div>
       </div>
     </div>
     <!-- in theory, i should be able to use hidden or disabled here but all variations of
